apps/speedtest-tracker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker
  namespace: speedtest-tracker
spec:
  selector:
    app: speedtest-tracker
  ports:
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  type: LoadBalancer
